release 20.2.4
3rd party vulnerability (CVE-2020-27223, CVE-2021-25122, CVE-2021-25329)
resolves #295: Cluster resilience improvements
resolves #307: Webswing Session Pool Not Working With SSL Cert [QUA-000542] [D4T-000561]
resolves #308: Touch scaling with CWM - use CSS zoom instead of viewport
resolves #310: Clipboard and DnD operations don't create a copy of Transferable data [D4T-000556], reflective access warning fix, -h 0.0.0.0 app connection fix
resolves #311: Export javascript function for logout [D4T-000570]
resolves #312: Remove Logout buttons from dialogs if using NONE security module
resolves #314: Optimize Caret switch causing infinite cycle on EDT [A-D-000534]
resolves #315: fixed "Start again" and "autoLogout" issues
resolves #316: admin console permissions handling
resolves #319: Customization to allow canvas to be visible while reconnecting
resolves #324: readonly fix  [VER-000600]
resolves #325 fix of remove method [VER-000602]
resolves #326: Memory allocation increase in 20.2 compared to 20.1, increase default websocket buffer size